# calcx

./: CMakeLists.txt  README.md  main.c
aux/: aux.c  aux.h
stack/: stack.c  stack.h
